# PDF-retrieval-system

./: .env  .gitignore  Readme.md  colqwen_create_app.py  colqwen_query.py  colqwen_upload_data.py  config.py  create_and_upload_embeddings.py  create_vespa_app.py  create_vespa_app_NN.py  docker-compose.yml  pdfs.json  pyproject.toml  queries.json  retrive_and_generate_report_NN.py
